--- a/style.css
+++ b/style.css
@@ -26,10 +26,39 @@
 
 
 
+.items-1 {
+  
+}
+.items-2 {
+    
+}
+.items-3 {
+    
+}
+.items-4 {
+   
+}
+.items-5 {
+   
+}
 
 
 
-
+/* .items-1 {
+    order: 3;
+}
+.items-2 {
+    order: 4;
+}
+.items-3 {
+    order: 0;
+}
+.items-4 {
+    order: 1;
+}
+.items-5 {
+    order: 2;
+} */
 
 
 /* .items-3 {
@@ -37,5 +66,6 @@
 }
 
 .items-4 {
-    font-size: 70px;
-} */
+    font-size: 70px; 
+    align-self: stretch;
+}  */
