Added more flexbox properties

--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@
     background-color: #cacaca;
     padding: 10px;
     margin: 50px;
-    /* height: 1400px; */
+    /* height: 1400px;  */
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 .item {
@@ -21,51 +23,33 @@
     font-size: 35px;
     padding: 20px;
     margin: 10px;
+    flex: 1;
 }
-
-
-
 
 .items-1 {
-  
+    /* order: 3; */
 }
 .items-2 {
-    
+    /* order: 4; */ 
 }
 .items-3 {
-    
+    /* order: 0; */
+    /* height: 150px; */
 }
 .items-4 {
-   
+    /* order: 1; */
+    /* font-size: 70px; 
+    align-self: stretch; */
 }
 .items-5 {
-   
+    /* order: 2; */
+    /* flex-basis: 700px; 
+    flex-shrink: 0; */
+}
+
+.items-10 {
+    flex: 1;
 }
 
 
 
-/* .items-1 {
-    order: 3;
-}
-.items-2 {
-    order: 4;
-}
-.items-3 {
-    order: 0;
-}
-.items-4 {
-    order: 1;
-}
-.items-5 {
-    order: 2;
-} */
-
-
-/* .items-3 {
-    height: 150px;
-}
-
-.items-4 {
-    font-size: 70px; 
-    align-self: stretch;
-}  */
